# ort-inference-ner

./: Cargo.toml  README.md  pyproject.toml
src/: main.rs
