[package]
name = "onnxruntime-ner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
clap = { version = "*", features = ["derive"] }
ndarray = "*"
ndarray-stats = "0.7.0"
ort = { version = "=2.0.0-rc.11", features = ["ndarray", "half", "download-binaries", "copy-dylibs", "cuda"] }
ort-sys = "=2.0.0-rc.11"
rayon = "*"
rust_tokenizers = "*"
serde = "*"
serde_json = "*"
thiserror = "*"
