[project]
name = "ort-ner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nvidia-cublas-cu11>=11.11.3.6",
    "nvidia-cublas-cu12>=12.8.4.1",
    "onnxruntime>=1.23.2",
    "onnxruntime-gpu>=1.23.2",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
